# hdx-scraper-geonode

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
src/hdx/scraper/geonode/: geonodetohdx.py  hdx_geonode.yml
tests/hdx/scraper/geonode/: test_geonodetohdx.py
