[metadata]
name = hdx-scraper-geonode
description = HDX Python generic geonode scraper
author = Michael Rans
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = HDX, scraper, geonode
url = https://github.com/OCHA-DAP/hdx-scraper-geonode
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.6

setup_requires =
    pytest-runner

install_requires =
    hdx-python-api>=5.3.1
    python-slugify

tests_require =
    pytest
    pytest-cov
    pytest-pythonpath

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
test = pytest